<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>demo</artifactId>
  <build>
    <plugins>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
            </exclude>
          </excludes>
        </configuration>
        <groupId>org.springframework.boot</groupId>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-security</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <dependency>
      <artifactId>spring-boot-devtools</artifactId>
      <groupId>org.springframework.boot</groupId>
      <optional>true</optional>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.postgresql</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <artifactId>java-jwt</artifactId>
      <groupId>com.auth0</groupId>
      <version>4.4.0</version>
    </dependency>

    <dependency>
      <artifactId>spring-security-test</artifactId>
      <groupId>org.springframework.security</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <version>5.9.3</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-docker-compose</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>jjwt</artifactId>
      <groupId>io.jsonwebtoken</groupId>
      <version>0.9.1</version>
    </dependency>
    <dependency>
      <artifactId>mockito-inline</artifactId>
      <groupId>org.mockito</groupId>
      <scope>compile</scope>
      <version>5.2.0</version>
    </dependency>
    <dependency>
      <artifactId>hibernate-validator</artifactId>
      <groupId>org.hibernate.validator</groupId>
      <version>8.0.0.Final</version>
    </dependency>
    <dependency>
      <artifactId>flyway-core</artifactId>
      <groupId>org.flywaydb</groupId>
      <version>10.15.0</version>
    </dependency>

    <dependency>
      <artifactId>modelmapper</artifactId>
      <groupId>org.modelmapper</groupId>
      <version>3.2.0</version>
    </dependency>
    <dependency>
      <artifactId>mockito-junit-jupiter</artifactId>
      <groupId>org.mockito</groupId>
      <scope>compile</scope>
      <version>5.2.0</version>
    </dependency>
    <dependency>
      <artifactId>flyway-database-postgresql</artifactId>
      <groupId>org.flywaydb</groupId>
    </dependency>
  </dependencies>
  <description>Demo project for Spring Boot</description>
  <developers>
    <developer/>
  </developers>
  <groupId>com.alexandria</groupId>
  <licenses>
    <license/>
  </licenses>
  <modelVersion>4.0.0</modelVersion>
  <name>demo</name>
  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>3.3.2</version> <!-- lookup parent from repository -->
  </parent>
  <properties>
    <java.version>17</java.version>
  </properties>
  <scm>
    <connection/>
    <developerConnection/>
    <tag/>
    <url/>
  </scm>
  <url/>

  <version>0.0.1-SNAPSHOT</version>

</project>
